# evil-read-arxiv

./: .gitignore  AGENTS.md  CLAUDE.md  QUICKSTART.md  README.md  README_en.md  pyproject.toml
evil_read_arxiv/: __init__.py  cli.py  paths.py  text.py
evil_read_arxiv/commands/: __init__.py
evil_read_arxiv/commands/conf_papers/: __init__.py  search_conf_papers.py
evil_read_arxiv/commands/extract_paper_images/: __init__.py  extract_images.py
evil_read_arxiv/commands/paper_analyze/: __init__.py  generate_note.py  update_graph.py
evil_read_arxiv/commands/paper_search/: __init__.py  paper_hunter.py
evil_read_arxiv/commands/start_my_day/: __init__.py  link_keywords.py  scan_existing_notes.py  search_arxiv.py
evil_read_arxiv/skills/evil-read-arxiv/conf-papers/: SKILL.md
evil_read_arxiv/skills/evil-read-arxiv/paper-analyze/: SKILL.md
evil_read_arxiv/skills/evil-read-arxiv/start-my-day/: SKILL.md
skills/: manifest.json
skills/evil-read-arxiv/conf-papers/: SKILL.md
skills/evil-read-arxiv/extract-paper-images/: SKILL.md
skills/evil-read-arxiv/paper-analyze/: SKILL.md
skills/evil-read-arxiv/paper-search/scripts/: paper_hunter.py
skills/evil-read-arxiv/start-my-day/: SKILL.md
web/src/app/api/papers/[id]/images/: route.ts
web/src/lib/: python-bridge.ts
