[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "evil-read-arxiv"
version = "2.1.0"
description = "Individually installable paper-reading skills with a uv tool-friendly CLI."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "PyYAML>=6.0",
  "requests>=2.28.0",
  "PyMuPDF>=1.23.0",
  "arxiv",
  "pymed",
]

[project.scripts]
evil-read-arxiv = "evil_read_arxiv.cli:main"

[tool.setuptools]
packages = ["evil_read_arxiv"]

[tool.setuptools.data-files]
"skills" = ["skills/manifest.json"]
"skills/evil-read-arxiv/start-my-day" = ["skills/evil-read-arxiv/start-my-day/SKILL.md"]
"skills/evil-read-arxiv/paper-analyze" = ["skills/evil-read-arxiv/paper-analyze/SKILL.md"]
"skills/evil-read-arxiv/extract-paper-images" = ["skills/evil-read-arxiv/extract-paper-images/SKILL.md"]
"skills/evil-read-arxiv/paper-search" = ["skills/evil-read-arxiv/paper-search/SKILL.md"]
"skills/evil-read-arxiv/conf-papers" = [
  "skills/evil-read-arxiv/conf-papers/SKILL.md",
  "skills/evil-read-arxiv/conf-papers/conf-papers.yaml",
]
